@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.43 2001-01-04 10:28:47 bagder Exp $
+dnl $Id: configure.in,v 1.44 2001-01-08 10:00:14 bagder Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(lib/urldata.h)
 AM_CONFIG_HEADER(config.h src/config.h)
@@ -613,7 +613,9 @@ AC_OUTPUT( Makefile \
 	   include/curl/Makefile \
 	   src/Makefile \
            lib/Makefile \
-           tests/Makefile)
+           tests/Makefile \
+	   curl.spec \
+	   curl-ssl.spec)
 dnl	   perl/checklinks.pl \
 dnl	   perl/getlinks.pl \
 dnl        perl/formfind.pl \
