@@ -1,8 +1,12 @@
 #
-# $Id: Makefile.am,v 1.13 2000-11-30 22:22:08 bagder Exp $
+# $Id: Makefile.am,v 1.14 2001-01-08 10:00:14 bagder Exp $
 #
 
 AUTOMAKE_OPTIONS = foreign
+
+EXTRA_DIST = getdate.y \
+       Makefile.b32 Makefile.b32.resp Makefile.m32 Makefile.vc6 \
+       libcurl.def dllinit.c
 
 lib_LTLIBRARIES = libcurl.la
 
@@ -54,7 +58,9 @@ download.h     getenv.c       ldap.h         ssluse.h       \
 escape.c       getenv.h       mprintf.c      telnet.c       \
 escape.h       getpass.c      netrc.c        telnet.h       \
 getinfo.c highlevel.c strequal.c strequal.h easy.c \
-security.h security.c krb4.c memdebug.c memdebug.h
+security.h security.c krb4.c memdebug.c memdebug.h inet_ntoa_r.h
+
+noinst_HEADERS = setup.h highlevel.h
 
 # Say $(srcdir), so GNU make does not report an ambiguity with the .y.c rule.
 $(srcdir)/getdate.c: getdate.y
