@@ -1,5 +1,5 @@
 #
-# $Id: Makefile.am,v 1.10 2000-11-30 08:08:49 bagder Exp $
+# $Id: Makefile.am,v 1.11 2001-01-08 10:00:15 bagder Exp $
 #
 
 # Some flags needed when trying to cause warnings ;-)
@@ -10,17 +10,24 @@ INCLUDES = -I$(top_srcdir)/include
 
 bin_PROGRAMS = curl #memtest
 
+noinst_HEADERS = setup.h \
+	config-win32.h \
+	urlglob.h \
+	version.h \
+	writeout.h
+
 #memtest_SOURCES = memtest.c
 #memtest_LDADD = $(top_srcdir)/lib/libcurl.la
 
 curl_SOURCES = main.c hugehelp.c urlglob.c writeout.c
-curl_LDADD = $(top_srcdir)/lib/libcurl.la
-curl_DEPENDENCIES = $(top_srcdir)/lib/libcurl.la
+curl_LDADD = ../lib/libcurl.la
+curl_DEPENDENCIES = ../lib/libcurl.la
 BUILT_SOURCES = hugehelp.c
 CLEANFILES = hugehelp.c
 NROFF=@NROFF@
 
-EXTRA_DIST = mkhelp.pl Makefile.vc6
+EXTRA_DIST = mkhelp.pl config-win32.h \
+	Makefile.vc6 Makefile.b32 Makefile.m32
 
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
